changed questions to appear in the center of the screen

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         }
 
         div.question {
-            font-size: 18px;
+            font-size: 30px;
             font-family: Helvetica-Regular;
             background-color: rgb(104, 127, 121);
             color: whitesmoke;
@@ -88,9 +88,14 @@
             display: block;
             margin-left: auto;
             margin-right: auto;
-            width: 680px;
+            width: 855px;
             text-align: center;
-            margin-top: 10px;
+        }
+
+        ol.answers {
+            font-size: 30px;
+            font-family: Helvetica-Regular;
+            color: whitesmoke;
         }
 
         a,
@@ -121,50 +126,62 @@
 
     <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
+    <a name="question1">
+    </a>
+
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+
     <div class="question">
-        <a name="question1">
-            <h3>
-                Okay, let's get started, what is 12345 + 67890?
-            </h3>
-            <ol>
-                <li><a class="answer" href="#wrong">81130</a></li>
-                <li><a class="answer" href="#wrong">80153</a></li>
-                <li><a class="answer" href="#wrong">80244</a></li>
-                <li><a class="answer" href="#question2">80235</a></li>
-            </ol>
-        </a>
+
+        <h3>
+            (1/10) Okay, let's get started, what is 12345 + 67890?
+        </h3>
+        <ol class="answers">
+            <li><a class="answer" href="#wrong">81130</a></li>
+            <li><a class="answer" href="#wrong">80153</a></li>
+            <li><a class="answer" href="#wrong">80244</a></li>
+            <li><a class="answer" href="#question2">80235</a></li>
+        </ol>
+
     </div>
 
     <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
+    <a name="question2">
+    </a>
+
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+
     <div class="question">
-        <a name="question2">
-            <h3>
-                What is 12345 * 67890?
-            </h3>
-            <ol>
-                <li><a class="answer" href="#question3">838102050</a></li>
-                <li><a class="answer" href="#wrong">838102045</a></li>
-                <li><a class="answer" href="#wrong">838102036</a></li>
-                <li><a class="answer" href="#wrong">838102024</a></li>
-            </ol>
-        </a>
+
+        <h3>
+            (2/10) What is 12345 * 67890?
+        </h3>
+        <ol class="answers">
+            <li><a class="answer" href="#question3">838102050</a></li>
+            <li><a class="answer" href="#wrong">838102045</a></li>
+            <li><a class="answer" href="#wrong">838102036</a></li>
+            <li><a class="answer" href="#wrong">838102024</a></li>
+        </ol>
     </div>
 
     <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
+    <a name="question3">
+    </a>
+
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+
     <div class="question">
-        <a name="question3">
-            <h3>
-                What is 12345 - 67890?
-            </h3>
-            <ol>
-                <li><a class="answer" href="#wrong">-55546</a></li>
-                <li><a class="answer" href="#question4">-55545</a></li>
-                <li><a class="answer" href="#wrong">-55544</a></li>
-                <li><a class="answer" href="#wrong">-55543</a></li>
-            </ol>
-        </a>
+        <h3>
+            (3/10) What is 12345 - 67890?
+        </h3>
+        <ol class="answers">
+            <li><a class="answer" href="#wrong">-55546</a></li>
+            <li><a class="answer" href="#question4">-55545</a></li>
+            <li><a class="answer" href="#wrong">-55544</a></li>
+            <li><a class="answer" href="#wrong">-55543</a></li>
+        </ol>
     </div>
 
 
