finished adding all questions and anchors

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <html>
 
 <head>
+    <a name="main">
+    </a>
     <title>
         Math Quiz
     </title>
@@ -81,6 +83,7 @@
             font-size: 30px;
             font-family: Helvetica-Regular;
             background-color: rgb(104, 127, 121);
+            padding: 20px;
             color: whitesmoke;
             border-color: whitesmoke;
             border-width: 10px;
@@ -125,16 +128,13 @@
     </a>
 
     <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-
     <a name="question1">
     </a>
-
     <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
     <div class="question">
-
         <h3>
-            (1/10) Okay, let's get started, what is 12345 + 67890?
+            (1/10) What is 12345 + 67890?
         </h3>
         <ol class="answers">
             <li><a class="answer" href="#wrong">81130</a></li>
@@ -142,18 +142,14 @@
             <li><a class="answer" href="#wrong">80244</a></li>
             <li><a class="answer" href="#question2">80235</a></li>
         </ol>
-
     </div>
 
     <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-
     <a name="question2">
     </a>
-
     <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
     <div class="question">
-
         <h3>
             (2/10) What is 12345 * 67890?
         </h3>
@@ -166,10 +162,8 @@
     </div>
 
     <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-
     <a name="question3">
     </a>
-
     <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
     <div class="question">
@@ -184,7 +178,158 @@
         </ol>
     </div>
 
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+    <a name="question4">
+    </a>
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
+    <div class="question">
+        <h3>
+            (4/10) What is 99999 * 99999?
+        </h3>
+        <ol class="answers">
+            <li><a class="answer" href="#wrong">9999800000</a></li>
+            <li><a class="answer" href="#question5">9999800001</a></li>
+            <li><a class="answer" href="#wrong">9999800002</a></li>
+            <li><a class="answer" href="#wrong">9999800003</a></li>
+        </ol>
+    </div>
+
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+    <a name="question5">
+    </a>
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+
+    <div class="question">
+        <h3>
+            (5/10) What is 111111 * 111111?
+        </h3>
+        <ol class="answers">
+            <li><a class="answer" href="#wrong">12345654</a></li>
+            <li><a class="answer" href="#wrong">123456543</a></li>
+            <li><a class="answer" href="#wrong">1234565432</a></li>
+            <li><a class="answer" href="#question6">12345654321</a></li>
+        </ol>
+    </div>
+
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+    <a name="question6">
+    </a>
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+
+    <div class="question">
+        <h3>
+            (6/10) What is 321321 - 123123?
+        </h3>
+        <ol class="answers">
+            <li><a class="answer" href="#wrong">198196</a></li>
+            <li><a class="answer" href="#wrong">198197</a></li>
+            <li><a class="answer" href="#question7">198198</a></li>
+            <li><a class="answer" href="#wrong">198199</a></li>
+        </ol>
+    </div>
+
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+    <a name="question7">
+    </a>
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+
+    <div class="question">
+        <h3>
+            (7/10) What is 123454321 + 543212345?
+        </h3>
+        <ol class="answers">
+            <li><a class="answer" href="#wrong">444444444</a></li>
+            <li><a class="answer" href="#wrong">555555555</a></li>
+            <li><a class="answer" href="#question8">666666666</a></li>
+            <li><a class="answer" href="#wrong">777777777</a></li>
+        </ol>
+    </div>
+
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+    <a name="question8">
+    </a>
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+
+    <div class="question">
+        <h3>
+            (8/10) What is 62931402 * 3219?
+        </h3>
+        <ol class="answers">
+            <li><a class="answer" href="#question9">202576183038</a></li>
+            <li><a class="answer" href="#wrong">202576183037</a></li>
+            <li><a class="answer" href="#wrong">202576183036</a></li>
+            <li><a class="answer" href="#wrong">202576183035</a></li>
+        </ol>
+    </div>
+
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+    <a name="question9">
+    </a>
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+
+    <div class="question">
+        <h3>
+            (9/10) What is 123523545 + 7346460239?
+        </h3>
+        <ol class="answers">
+            <li><a class="answer" href="#wrong">7469983781</a></li>
+            <li><a class="answer" href="#wrong">7469983782</a></li>
+            <li><a class="answer" href="#wrong">7469983783</a></li>
+            <li><a class="answer" href="#question10">7469983784</a></li>
+        </ol>
+    </div>
+
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+    <a name="question10">
+    </a>
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+
+    <div class="question">
+        <h3>
+            (10/10) What is 592384652135787 - 9?
+        </h3>
+        <ol class="answers">
+            <li><a class="answer" href="#wrong">592384652135776</a></li>
+            <li><a class="answer" href="#wrong">592384652135777</a></li>
+            <li><a class="answer" href="#finished">592384652135778</a></li>
+            <li><a class="answer" href="#wrong">592384652135779</a></li>
+        </ol>
+    </div>
+
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+    <a name="wrong">
+    </a>
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+
+    <div class="question">
+        <h3>
+            Wrong answer selected. Please try again!
+        </h3>
+    </div>
+    <a class="start" href="#question1">
+        <h2 class="subtitle">
+            CLICK TO RESTART!
+        </h2>
+    </a>
+
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+    <a name="finished">
+    </a>
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+
+    <div class="question">
+        <h3>
+            Congrats! You've completed all the quiz questions.
+        </h3>
+    </div>
+    <a class="start" href="#main">
+        <h2 class="subtitle">
+            BACK TO MAIN
+        </h2>
+    </a>
+
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
 </body>
 
